--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,17 +7,35 @@ services:
     env_file:
       - .env
     environment:
+      POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_EMAIL: ${POSTGRES_EMAIL}
+      POSTGRES_HOST: ${POSTGRES_HOST}
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./scripts/create.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - app-network
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: sisdb_pgadmin
+    env_file:
+      - .env
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${POSTGRES_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${POSTGRES_PASSWORD}
+    ports:
+      - "8080:80"
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin/
     networks:
       - app-network
 volumes:
   postgres_data:
+  pgadmin_data:
 
 networks:
   app-network:
